# Verona_

./: Dockerfile  db.sqlite3  docker-compose.yml  heroku.yml  manage.py  pyproject.toml  readme.md  requirements.txt
static/assets/base/js/: app.js
static/assets/fonts/: fonts.css
staticfiles/: staticfiles.json
staticfiles/assets/: livecss.js
staticfiles/assets/fonts/: fonts.1ebd75e83d4b.css
staticfiles/assets/styles/: override-styles.579013dd6769.css
templates/: index.html  projectsPage.html  test.html
templates/sections/: feedback.html  projects.html
verona/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
verona/migrations/: 0001_initial.py  0002_rename_projects_project.py  0003_feedback.py  0004_rename_feedback_message.py  0005_auto_20210904_1802.py  0006_auto_20210904_1811.py  0007_auto_20210904_1832.py  0008_auto_20210904_1849.py  0009_image_name.py  0010_auto_20210904_1859.py  0011_auto_20210904_1929.py  0012_auto_20210904_1932.py  0013_rename_file_project_main_photo.py  0014_project_description.py  0015_auto_20210904_2013.py  0016_rename_image_project_main_photo.py  0017_auto_20210904_2219.py  0018_project_hide.py  0019_alter_project_main_photo.py  0020_alter_project_main_photo.py  0021_alter_project_main_photo.py  0022_alter_project_main_photo.py  0023_alter_project_main_photo.py  0024_alter_project_main_photo.py  0025_alter_project_main_photo.py  0026_alter_project_main_photo.py  0027_alter_project_main_photo.py  0028_delete_image.py
veronaProject/: .env  asgi.py  settings.py  urls.py  wsgi.py
(+46 files in other folders)
