[tool.poetry]
name = "verona"
version = "0.1.0"
description = ""
authors = ["farahzuot <farahz997@eng.hu.edu.jo>"]

[tool.poetry.dependencies]
python = "^3.9"
Pillow = "^8.3.1"
django-resized = "^0.3.11"
django-environ = "^0.6.0"
psycopg2-binary = "^2.9.1"
whitenoise = "^5.3.0"
Django = "^3.2.7"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
black = "^21.8b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
